test/visibility/import/public/rename/multipleDefRenameError.good
multipleDefRenameError.chpl:2: error: symbol y is multiply defined
note: 'x' was renamed to 'y' at multipleDefRenameError.chpl:12
multipleDefRenameError.chpl:9: note: also defined here
